Skills Tags Design Issues Changes

--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -16,16 +16,16 @@
           [items]="skillItems"
           formControlName="skill_id"
           optionValueField="id"
-          optionTextField="tag"
+          optionTextField="tags"
           autoClearSearch="true"
           noResultsFound="No results found"
            >
            <ng-template ngx-select-option-selected let-option let-text="text">
-           {{option?.text ? option?.text?.split('-')[0] : ''}}
+           {{option?.text ? option?.text?.split('--')[0] : ''}}
           </ng-template>
 
           <ng-template ngx-select-option let-option let-text="text">
-              <span *ngIf="indexOfFilter(option?.value) ==true " >{{option?.text}}</span>
+              <span *ngIf="indexOfFilter(option?.value,i) ==true " >{{option?.text}}</span>
           </ng-template>
 
           <ng-template ngx-select-option-not-found>
@@ -72,12 +72,12 @@
         [items]="skillsItems"
         formControlName="skills"
         optionValueField="id"
-        optionTextField="tag"
+        optionTextField="tags"
         autoClearSearch="true"
         noResultsFound="No results found"
          >
          <ng-template ngx-select-option-selected let-option let-text="text">
-          {{option?.text ? option?.text?.split('-')[0] : ''}}
+          {{option?.text ? option?.text?.split('--')[0] : ''}}
         </ng-template>
 
         <ng-template ngx-select-option let-option let-text="text">
