--- a/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
@@ -204,7 +204,7 @@
 				<ng-container *ngIf="userInfo?.hands_on_experience?.length; else elseHandsTemplate">
 					<ng-container *ngFor="let item of userInfo?.hands_on_experience; let i = index" >
 						<div [ngClass]="{'pl-2': i >= 1}" class="text-center border-right pr-2">
-							{{item?.skill_id ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item?.skill_id)?.tag) : '--'}} <br>({{item?.experience + ' ' + item?.exp_type?.charAt(0)}})
+							{{item?.skill_id ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item?.skill_id)?.long_tag) : '--'}} <br>({{item?.experience + ' ' + item?.exp_type?.charAt(0)}})
 						</div>
 					</ng-container>
 				</ng-container>
@@ -227,7 +227,7 @@
 				<ng-container *ngIf="userInfo?.skills?.length; else elseSkillsTemplate">
 					<li class=" text-uppercase m-0 float-left" *ngFor="let item of utilsHelperService.differenceByPropValArray(userInfo?.skills, userInfo?.hands_on_experience, 'skill_id'); let i = index; let last = last;">
 						<span class="text-wrap-custom float-left" *ngIf="!utilsHelperService.isEmptyObj(sharedService.onFindSkillsFromSingleID(item))">
-							{{item ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.tag): '--'}}
+							{{item ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.long_tag): '--'}}
 						</span>
 					</li>
 				</ng-container>
