Profile design changes and the settings issue fixing with the tooltip implementation

--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
@@ -83,7 +83,7 @@
               <option >Select Role Type</option>
               <option  value="Technical">Technical</option>
               <option  value="Functional">Functional</option>
-              <option  value="Technofuncational">Technofuncational</option>
+              <option  value="Technofunctional">Technofunctional</option>
           </select>
           <app-control-messages [control]="f['employer_role_type']"></app-control-messages>
       </div>
