--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -153,11 +153,11 @@
 					<div class="col-lg-6 info">
 						<ul class="list-group ul-value">
 							<li class="list-group-item" *ngIf="childForm?.value?.personalDetails?.work_authorization == 0 ">
-								 {{"postYourResume.iHaveWorkAuthorization" | translate }}
-								</li>
-								<li class="list-group-item" *ngIf="childForm?.value?.personalDetails?.work_authorization == 1 ">
-								 {{"postYourResume.iNeedVisaAponsorship" | translate }}
-								</li>
+								 {{utilsHelperService.onConvertArrayToString(childForm?.value?.personalDetails?.visa_type)}}
+							</li>
+							<li class="list-group-item" *ngIf="childForm?.value?.personalDetails?.work_authorization == 1 ">
+							 {{"postYourResume.iNeedVisaAponsorship" | translate }}
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -273,10 +273,10 @@
 				</div>
 				<div class="col-lg-8 info">
 					<ul class="list-group">
-						<li class="list-group-item text-uppercase d-flex handsExp">
+						<li class="list-group-item text-uppercase d-flex handsExps ">
 							<ng-container *ngIf="childForm?.value?.skillSet?.hands_on_experience?.length; else elseHandsTemplate">
 								<ng-container *ngFor="let item of childForm?.value?.skillSet?.hands_on_experience; let i = index" >
-									<div [ngClass]="{'pl-2': i >= 1}" class="text-center border-right pr-2">
+									<div [ngClass]="{'pl-2': i >= 1}" class="text-center border-right pr-2 skils-short"  tooltipClass="my-custom-classes"  container="body" placement="top" [ngbTooltip]="utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item?.skill_id)?.long_tag)">
 										{{item?.skill_id ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item?.skill_id)?.tag) : '--'}} <br>({{item?.experience + ' ' + item?.exp_type?.charAt(0)}})
 									</div>
 								</ng-container>
@@ -296,13 +296,18 @@
 				</div>
 				<div class="col-lg-8 info">
 					<ul class="list-group">
-						
-							<small style="color: #000;font-size: 14px;font-weight: 600;" *ngFor="let item of utilsHelperService.differenceByPropValArray(childForm?.value?.skillSet?.skills, childForm?.value?.skillSet?.hands_on_experience, 'skill_id')">
-							<li class=" text-uppercase m-0 float-left" >
-								{{item ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.tag): '--'}}
-							</li>
+						<li class="list-group-item text-uppercase"> 
+							<ng-container *ngIf="childForm?.value?.skillSet?.skills.length; else elseSkillsTemplate">
+							<small class="knldge m-0 float-left" *ngFor="let item of utilsHelperService.differenceByPropValArray(childForm?.value?.skillSet?.skills, childForm?.value?.skillSet?.hands_on_experience, 'skill_id'); let last = last;">
+							<span class="knldge"  tooltipClass="my-custom-class"  container="body"   placement="top" [ngbTooltip]="utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.long_tag)">
+								{{item ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.tag): '--'}}{{last ? '' : '&nbsp;,&nbsp;&nbsp;'}}
+							</span>
 							</small>
-						
+							</ng-container>
+				<ng-template #elseSkillsTemplate>
+					<li>--</li>
+				</ng-template>
+						</li>
 					</ul>
 				</div>
 			</div>
