--- a/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
@@ -7,7 +7,7 @@
           <li class="breadcrumb-item active" aria-current="page">{{"dashboard.dashboard" | translate}}</li>
         </ol>
       </div>
-      <div class="col-lg-7 clearfix">
+      <!-- <div class="col-lg-7 clearfix">
         <form class="form-inline float-right">
           <div class="input-with-icon mr-sm-2">
             <input type="text" class="form-control" name="job-title" placeholder="Job Title / SAP Module" style="height: 36px;">
@@ -20,7 +20,7 @@
           <button type="button" class="btn btn-theme-blue" onclick="location.href='find-jobs.html'" style="height:35px;line-height:15px;">
           <i class="fas fa-search"></i></button>
         </form>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
