--- a/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
@@ -34,6 +34,12 @@
             *ngIf="currentTabInfo.tabNumber == 2"
             [currentTabInfo]="currentTabInfo">
             </app-requirement-criteria>
+			
+            <app-other-preference
+            [postedJobsDetails]="postedJobsDetails"
+            *ngIf="currentTabInfo.tabNumber == 3"
+            [currentTabInfo]="currentTabInfo">
+            </app-other-preference>
 
           </div>
 
