--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
@@ -9,7 +9,7 @@
             <option [value]="''">{{"common.select" | translate }} {{"postYourResume.degree" | translate }}
             </option>
             <ng-container *ngFor="let education of educations; let i = index">
-              <option [style.display]="educationsSelectedArray?.includes(education) ? 'none' : 'block'" [value]="education">
+              <option [style.display]="educationsSelectedArrayCheck(education,ticket) ? 'none' : 'block'" [value]="education">
                 {{education}}
               </option>
             </ng-container>
