--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -2,18 +2,29 @@
   <div class="row mt-5 ">
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
-        <label>{{"postJob.totalYearsOfExperience" | translate }}</label>
+        <label>{{"postJob.totalYearsOfExperience" | translate }}(Min)</label>
         <input appMarkAsterisk numbersOnly formControlName="experience" type="text" class="form-control w-25 text-center" value="8+">
         <app-control-messages [control]="f['experience']"></app-control-messages>
       </div>
     </div>
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
-        <label>{{"postJob.totalYearsOfSapExperience" | translate }}</label>
+        <label>{{"postJob.totalYearsOfSapExperience" | translate }}(Min)</label>
         <input appMarkAsterisk numbersOnly formControlName="sap_experience" type="text" class="form-control w-25 text-center" value="5+">
         <app-control-messages [control]="f['sap_experience']"></app-control-messages>
       </div>
-    </div>
+    </div><div class="col-lg-4 col-md-6">
+									<div class=" form-group">
+										<label>Education </label>					 
+										<select class="form-control w-75 " name="job-type">
+											<option selected="" disabled="">Select Degree</option>
+											<option>Bachelors</option>
+											<option>Diploma</option>
+											<option>Masters</option>
+											<option>Doctorate</option>
+										</select>
+									</div>
+								</div>
   </div>
 
   <div class="row mt-2">
@@ -95,7 +106,7 @@
     </ng-container>
   </div>
   <div class="row mt-3">
-    <div class="col-lg-12 col-md-6">
+    <div class="col-lg-9 col-md-6">
       <div class=" form-group">
         <label>{{"dashboard.knowledgeOn" | translate }} </label>
         <ngx-select
@@ -145,7 +156,7 @@
         <!-- <input type="text" class="form-control" value="Python, JAVA, Microsoft BI, Angular" data-role="tagsinput"> -->
       </div>
     </div>
-    <div class="col-lg-3 col-md-6">
+    <div class="col-lg-4 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.endToEndImplementation" | translate }} </label>
         <input numbersOnly type="text" class="form-control w-25" formControlName="end_to_end_implementation">
@@ -153,7 +164,7 @@
     </div>
   </div>
   <div class="row mt-2">
-    <div class="col-lg-6 col-md-6">
+    <div class="col-lg-9 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.niceToHave" | translate }} </label>
         <ng-select id="niceToHave" [addTag]="true"  addTagText="Add Nice To Have" bindValue="label" bindLabel="label" placeholder="Ex. Docker, Azure" appendTo="body" multiple="true"
@@ -162,18 +173,10 @@
         <app-control-messages [control]="f['optinal_skills']"></app-control-messages>
       </div>
     </div>
-    <div class="col-lg-6 col-md-6">
-      <div class=" form-group">
-        <label>{{"postJob.certification" | translate }} </label>
-        <ng-select id="certification" [addTag]="true" addTagText="Add Certification" bindValue="label" bindLabel="label" placeholder="Ex. AWS, CCNA" appendTo="body" multiple="true"
-          formControlName="certification">
-        </ng-select>
-        <app-control-messages [control]="f['certification']"></app-control-messages>
-      </div>
-    </div>
+    
   </div>
   <div class="row mt-2">
-    <div class="col-lg-6 col-md-6">
+    <div class="col-lg-12 col-md-6">
       <div class=" form-group">
       </div>
       <div class=" form-group">
@@ -191,12 +194,21 @@
             <label class="custom-control-label"
               for="customRadioInline6">{{"postJob.shouldBeHavingAWorkPermit" | translate }}</label>
           </div>
+          <div class="custom-control custom-radio custom-control-inline">
+            <input (change)="onChangeFieldValue('work_authorization', 1)" [value]="1" formControlName="work_authorization" type="radio" id="customRadioInline6"
+              name="work_authorization" class="custom-control-input">
+            <label class="custom-control-label"
+              for="customRadioInline6">Should be a Citizen / PR / Authorized to Work</label>
+          </div>
         </div>
       </div>
       <app-control-messages [control]="f['work_authorization']"></app-control-messages>
     </div>
 
-    <div class="col-lg-2 col-md-6">
+    
+  </div>
+  <div class="row mt-3">
+  <div class="col-lg-2 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.travel" | translate }} </label>
         <select appMarkAsterisk formControlName="travel_opportunity" class="form-control">
@@ -208,12 +220,25 @@
         <app-control-messages [control]="f['travel']"></app-control-messages>
       </div>
     </div>
-  </div>
-  <div class="row mt-5">
-    <div class="col-lg-2 col-md-6">
+    <div class="col-lg-2 col-md-6" style="margin-top: 42px;">
       <label class="font-weight-bold">{{"postJob.visaSponsorship" | translate }} </label>
     </div>
-    <div class="col-lg-2 col-md-6">
+    <div class="col-lg-2 col-md-6" style="margin-top: 42px;">
+      <div class=" form-group">
+        <div class="showhideswitch">
+          <input formControlName="visa_sponsorship" type="checkbox" name="visa_sponsorship"
+            class="showhideswitch-checkbox" id="myshowhideswitch5">
+          <label class="showhideswitch-label" for="myshowhideswitch5">
+            <span class="showhideswitch-inner yesno"></span>
+            <span class="showhideswitch-switch"></span>
+          </label>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-2 col-md-6" style="margin-top: 42px;">
+      <label class="font-weight-bold">Need References</label>
+    </div>
+    <div class="col-lg-2 col-md-6" style="margin-top: 42px;">
       <div class=" form-group">
         <div class="showhideswitch">
           <input formControlName="visa_sponsorship" type="checkbox" name="visa_sponsorship"
@@ -227,3 +252,15 @@
     </div>
   </div>
 </div>
+<!-- <div class="col-lg-6 col-md-6">
+      <div class=" form-group">
+        <label>{{"postJob.certification" | translate }} </label>
+        <ng-select id="certification" [addTag]="true" addTagText="Add Certification" bindValue="label" bindLabel="label" placeholder="Ex. AWS, CCNA" appendTo="body" multiple="true"
+          formControlName="certification">
+        </ng-select>
+        <app-control-messages [control]="f['certification']"></app-control-messages>
+      </div>
+    </div>
+
+	-->
+
