--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
@@ -65,7 +65,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="row mt-2">
+	<div class="row mt-2" *ngIf="!childForm?.value?.jobPref?.remote_only">
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"postJob.travel" | translate }} </label>
@@ -78,7 +78,7 @@
 				<app-control-messages [control]="f['travel']"></app-control-messages>
 			</div>
 		</div>
-		<div class="col-lg-4 col-md-6" *ngIf="(!childForm?.value?.jobPref?.remote_only && !childForm?.value?.jobPref?.willing_to_relocate)">
+		<!-- <div class="col-lg-4 col-md-6" *ngIf="(!childForm?.value?.jobPref?.remote_only && !childForm?.value?.jobPref?.willing_to_relocate)">
 			<div class=" form-group">
 				<label>{{"postYourResume.preferredLocation" | translate }}</label>
 				<select formControlName="preferred_location" class="form-control">
@@ -89,10 +89,39 @@
 				</select>
 				<app-control-messages [control]="f['preferred_location']"></app-control-messages>
 			</div>
-		</div>
+		</div> -->
 	</div>
+	<div *ngIf="childForm?.value?.jobPref?.willing_to_relocate">
+	<h6 class="font-weight-bold mt-4">{{"postYourResume.preferredLocation" | translate }}</h6>
+	<div class="row mt-3" *ngFor="let ticket of t.controls; let i = index; let last = last">
+		<ng-container [formGroup]="ticket">
+		  <div class="col-lg-4 col-md-6">
+			<div class=" form-group">
+			  <label>{{"postYourResume.city" | translate}}</label>
+			  <input autocomplete="off" ngx-google-places-autocomplete
+			  (onAddressChange)="handleAddressChange($event,ticket)"
+			  formControlName="city" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.city' | translate">
+			  <app-control-messages [control]="f['city']"></app-control-messages>
+			</div>
+		  </div>
+		  <div class="col-lg-4 col-md-6">
+			<div class=" form-group">
+			  <label>{{"postYourResume.state" | translate}}</label>
+			  <input readonly style="background-color: #fff;" formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.state' | translate">
+			  <app-control-messages [control]="f['state']"></app-control-messages>
+			</div>
+		</div>
+		<div class="col-lg-2 col-md-4 d-flex justify-content-center align-items-center" style="padding-top: 20px;">
+        <button type="button" class="btn btn-outline-danger"
+          style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
+        <button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-outline-green ml-2"
+          style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
+      </div>
+		</ng-container>
+  </div>
+  </div>
 	<div class="row mt-2">
-		<div class="col-lg-12 col-md-6" *ngIf="childForm?.value?.personalDetails?.work_authorization == 0 ">
+		<!-- <div class="col-lg-12 col-md-6" *ngIf="childForm?.value?.personalDetails?.work_authorization == 0 ">
 			<div class=" form-group">
 				<label>Please choose the job of preferred countries</label>
 				<div class="pt-2">
@@ -101,7 +130,7 @@
 					</a>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<div class="col-lg-12 col-md-6">
 			<div class=" form-group">
 				<label>&nbsp;</label>
