--- a/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
@@ -21,7 +21,7 @@
           (onTabChangeEvent)="onHeaderTabChange($event)">
           </app-post-job-header>
 
-          <div class="tab-content" [@animSlider]="slidingCounter">
+          <div class="tab-content" >
 
             <app-job-information
             [postedJobsDetails]="postedJobsDetails"
