--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -117,3 +117,6 @@ a.disabled {
 .msp-mar:before {
   content: "\f3c5";
 } */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
