--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -13,7 +13,7 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito', sans-serif !important;
     font-size: 14px;
 	color: #000000;
     letter-spacing: 0.25px;
