Job POST Issues Fixing

--- a/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.css
+++ b/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.css
@@ -3,7 +3,7 @@
     min-height: 26px;
 	font-weight: 600;
 }
-.my-custom-class .tooltip-inner {
+.my-custom-classe .tooltip-inner {
     color: #000;
     background: #fff;
     background-color: #fff;
